--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="vfavicon.png" type="image/x-icon">
+    
+    <script src="app.js" defer></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" defer></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
+
+    <title>TODO List</title>
 </head>
 <body>
+    <div class="container">
+        <h1>TODO List</h1>
+        <!-- Input section -->
+        <div class="input section">
+            <input type="text" id="todoInput" placeholder="Ajouter un TODO"/>
+            <button id="submitBtn" class="btn">+</button>
+        </div>
 
+        <!-- TODOs section -->
+        <div class="todos section" id="todos">
+        </div>
+
+        <!-- Bottom section -->
+        <div class="bottom section">
+            <p>Il y a <span id="todosNb">0</span> TODOs en cours.</p>
+            <button class="btn" id="deleteAll">Tout supprimer</button>
+        </div>
+    </div>
 </body>
 </html>
